# card-ocr-online

./: .gitignore  README.md  api_poc.py  exp.md  program.py  pyproject.toml  test.py  test_local_backup.py  todo
apps/gui_qt/: controller.py  main.py  qt_ui_sink.py
apps/gui_qt/widgets/: add_cards_widget.py  export_widget.py  history_widget.py  manual_select_widget.py  select_source_widget.py  settings_widget.py  toggle_button_widget.py  video_view.py
apps/gui_qt/workers/: detect_card_worker.py  fetch_art_worker.py
core/api/: interfaces.py  types.py
core/io/: sinks.py  sources.py
core/pipeline/: base.py  bases.py
core/pipeline/stages/: canny.py  card_crop.py  card_detector.py  card_format.py  card_warp.py  edge_extractor.py  ocr_extract_text.py  ocr_preprocess.py  ocr_print_results.py  ocr_process.py  optic_char_recog.py
core/utils/: fetch_artwork.py  imaging.py
poc/: fetch_all_arts.py  test.py
src/card_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/card_scanner/apps/gui_qt/: controller.py  main.py
src/card_scanner/apps/gui_qt/widgets/: __init__.py  history_widget.py  manual_select_widget.py  select_source_widget.py  variant_selector_widget.py
src/card_scanner/apps/gui_qt/workers/: fetch_arts_worker.py
src/card_scanner/core/io/: sources.py
src/card_scanner/core/pipeline/stages/: optic_char_recog.py
src/card_scanner/core/utils/: imaging.py  network.py
tests/: fetch_expansion_ids.py  test.py  test_pipeline.py
