[tool.poetry]
name = "card-ocr-online"
version = "0.1.0"
description = "Core OpenCV + UI PySide, découplés"
authors = ["tom.montagnon@protonmail.com"]
packages = [{include="core"}, {include="apps"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0"
PySide6 = "^6.7.0"
numpy = "^1.26"
tomli = {version="^2.0", python="<3.11"}

[tool.poetry.scripts]
opencv-pyside-gui = "apps.gui_qt.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
