[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card_scanner"
version = "0.1.0"
description = "Core OpenCV + UI Pyside pour scanner des cartes SWU"
authors = [
    { name = "tom.montagnon", email = "tom.montagnon@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.10.0",
    "PySide6>=6.7.0",
    "numpy>=1.26",
    "tomli>=2.0; python_version<'3.11'"
]

[project.scripts]
my_app = "card_scanner.apps.gui_qt.main:main"


[tool.setuptools.packages.find]
where = ["src"]
include = ["card_scanner*"]

[tool.setuptools.package-data]
card_scanner = ["apps/gui_qt/assets/**/*", "config/*.toml"]
