[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card_scanner"
version = "0.1.0"
description = "Core OpenCV + UI Pyside pour scanner des cartes SWU"
authors = [
    { name = "tom.montagnon", email = "tom.montagnon@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.3.0",
    "pyside6>=6.10.0",
    "numpy>=2.3",
    "httpx[http2]"
]

[project.scripts]
my_app = "card_scanner.apps.gui_qt.main:main"


[tool.setuptools.packages.find]
where = ["src"]
include = ["card_scanner*"]

[tool.setuptools.package-data]
card_scanner = ["apps/gui_qt/assets/**/*", "config/*.toml"]
